--- a/dev.html
+++ b/dev.html
@@ -694,6 +694,10 @@ body.bestFlash::before{
 
 #panelBtn{ white-space:nowrap; }
 
+
+#addTimeBtn,#addTimeOverlayBtn{padding:10px 16px;border-radius:14px;background:#f7931a;color:#fff;font-weight:800;border:none;box-shadow:0 4px 14px rgba(247,147,26,0.45);} 
+
+#uploadBtn,#recBtn{padding:6px 10px !important;min-width:auto !important;font-weight:700;letter-spacing:0 !important;}
 </style>
 
 <style>
