--- a/dev.html
+++ b/dev.html
@@ -863,21 +863,28 @@ body.bestFlash::before{
 
   function loadPlayMeta(){
     try{ totalPlays = Number(localStorage.getItem(STORAGE_PLAY) || 0) || 0; }catch(e){ totalPlays = 0; }
-    try{ timeLeftS = Number(localStorage.getItem(STORAGE_TIME) || (DEFAULT_MINUTES*60)) || (DEFAULT_MINUTES*60); }catch(e){ timeLeftS = DEFAULT_MINUTES*60; }
+    timeLeftS = DEFAULT_MINUTES*60;
     try{ bestN = Number(localStorage.getItem(STORAGE_BEST) || 2) || 2; bestN = Math.max(2, Math.floor(bestN)); }catch(e){ bestN = 2; }
   }
   function savePlayMeta(){
     try{ localStorage.setItem(STORAGE_PLAY, String(totalPlays)); }catch(e){}
-    // Time is per-session (do not persist)
-    // try{ localStorage.setItem(STORAGE_TIME, String(timeLeftS)); }catch(e){}
+    try{ localStorage.setItem(STORAGE_TIME, String(timeLeftS)); }catch(e){}
     try{ localStorage.setItem(STORAGE_BEST, String(bestN)); }catch(e){}
   }
   
   // --- Best N tracking + reward ---
   function maybeUpdateBest(newN){
-    // Deprecated: record is evaluated only when the session ends (Final Score).
-    // Left here so older call-sites (if any) won't crash.
-  }
+    try{
+      const n = parseInt(newN)||0;
+      if(n>bestN){
+        bestN = n;
+        try{ localStorage.setItem(STORAGE_BEST, String(bestN)); }catch(e){}
+        // reward: +10 minutes playtime
+        timeLeftS += 10*60;
+        savePlayMeta();
+        renderPlayMeta();
+        celebrateNewBest();
+      }
     }catch(e){}
   }
 
@@ -975,8 +982,7 @@ function fmtTime(s){
       if(phase === "idle" || phase === "ended") return;
       if(timeLeftS <= 0) return;
       timeLeftS = Math.max(0, timeLeftS - 1);
-      // savePlayMeta(); // time is per-session
-
+      savePlayMeta();
       renderPlayMeta();
       if(timeLeftS <= 0){
         // time expired -> end current session and disable Play
@@ -995,14 +1001,10 @@ function fmtTime(s){
 
   if(addTimeBtn){
     addTimeBtn.addEventListener("click", ()=>{
-      // Open PayPal donation page (static site cannot auto-verify payment)
-      try { window.open(donateBtn?.href || "https://www.paypal.me/ConstantinosRagazas", "_blank", "noopener"); } catch(e) {}
-      const ok = window.confirm("After completing the $1 PayPal donation, tap OK to add 5 minutes of play time.");
-      if(!ok) return;
-      timeLeftS += (ADD_MINUTES*60);
-      // Time is per-session; no persistence needed
+      timeLeftS += 5*60;
+      savePlayMeta();
       renderPlayMeta();
-      setStatus(`Added ${ADD_MINUTES} minutes.`);
+      setStatus("Added 5 minutes.");
     });
   }
 
@@ -1852,17 +1854,6 @@ game.classList.add("goldGlow");
 
     phase = "transition";
     clearBoard();
-
-    // Evaluate record only at session end
-    const prevRecord = bestN;
-    if (maxNThisSession > bestN){
-      bestN = maxNThisSession;
-      try{ localStorage.setItem(STORAGE_BESTN, String(bestN)); }catch(e){}
-      // Bonus time for breaking the record
-      timeLeftS += 10*60;
-      try{ triggerRecordCelebration(); }catch(e){}
-    }
-
     syncLinesViewport();
     setLevel();
     ROUND_RADIUS = RECALL_RADIUS; // lock radius for this round
@@ -2003,7 +1994,8 @@ game.classList.add("goldGlow");
   async function onSuccess() {
     phase = "transition";
     maxNThisSession = Math.max(maxNThisSession, N);
-      setStatus(`✅ Success! Next round…`);
+        maybeUpdateBest(maxNThisSession);
+    setStatus(`✅ Success! Next round…`);
     await goldTransition(runToken);
     N = clamp(N + 1, MIN_N, MAX_N);
     await sleep(BETWEEN_ROUNDS_MS);
@@ -2014,7 +2006,8 @@ game.classList.add("goldGlow");
   async function onFailure() {
     phase = "transition";
     maxNThisSession = Math.max(maxNThisSession, N);
-      setStatus(`❌ Wrong order. Adjusting…`);
+        maybeUpdateBest(maxNThisSession);
+    setStatus(`❌ Wrong order. Adjusting…`);
     await goldTransition(runToken);
     N = clamp(N - 1, MIN_N, MAX_N);
     await sleep(BETWEEN_ROUNDS_MS);
@@ -2027,17 +2020,6 @@ game.classList.add("goldGlow");
     if(startBtn) startBtn.textContent = "Play";
 phase = "ended";
     clearBoard();
-
-    // Evaluate record only at session end
-    const prevRecord = bestN;
-    if (maxNThisSession > bestN){
-      bestN = maxNThisSession;
-      try{ localStorage.setItem(STORAGE_BESTN, String(bestN)); }catch(e){}
-      // Bonus time for breaking the record
-      timeLeftS += 10*60;
-      try{ triggerRecordCelebration(); }catch(e){}
-    }
-
     scoreEl.textContent = `N = ${maxNThisSession}`;
     overlay.classList.add("show");
     setStatus("Game ended.");
@@ -2082,7 +2064,6 @@ if(timeLeftS <= 0){
     // Count a Play press (persistent)
     totalPlays += 1;
     savePlayMeta();
-
     renderPlayMeta();
 
     ensureAudio();
@@ -2094,17 +2075,6 @@ if(timeLeftS <= 0){
     maxNThisSession = 2;
     setLevel();
     clearBoard();
-
-    // Evaluate record only at session end
-    const prevRecord = bestN;
-    if (maxNThisSession > bestN){
-      bestN = maxNThisSession;
-      try{ localStorage.setItem(STORAGE_BESTN, String(bestN)); }catch(e){}
-      // Bonus time for breaking the record
-      timeLeftS += 10*60;
-      try{ triggerRecordCelebration(); }catch(e){}
-    }
-
     setStatus("Starting…");
     sleep(120).then(async () => { await goldTransition(runToken); await runRound(runToken); });
 }
